--- a/src/Soenneker.Config.Realtime.csproj
+++ b/src/Soenneker.Config.Realtime.csproj
@@ -41,8 +41,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.1" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
-        <PackageReference Include="Soenneker.Extensions.String" Version="4.0.593" />
+        <PackageReference Include="Soenneker.Extensions.Configuration" Version="4.0.757" />
     </ItemGroup>
 </Project>
